- Add ability to edit reservation property on ZFS dataset.
- Add ability to edit permission on ZFS dataset.
- Add ability to edit mountpoint of ZFS pool.
- Add ability to import encrypted disks.
- Add ability to import software raid disks. (except vinum)
- Add ability to import single disks. (detect ZFS/UFS/NTFS only)
- Add ability to configure multiple iSCSI LUNs. (disk type only)
- Add ability to edit power mode and CPU frequency.
- Add ability to edit write cache mode on iSCSI target.
- Add ability to edit upload directory of webserver.
- Update mount points after importing disks. (GPT UFS/MBR UFS/GPT NTFS only)
- Add ZFS sparse volume support.
- Add GPT UUID to mount point.
- Add a warning for changing of the disk in config.
- Add force flag to ZFS pool creation.
- Add random SCSI serial when creating iSCSI target.
- Add auto IPv6 fot WebGUI.
- Wait response of LAN interface if static with gateway.
- Run umount before iSCSI initiator shutdown.
- Remount all after netif is up for iSCSI device.
- Clear notify after execute now of rsync client/local.
- Increase the number of config backup to 6.
- Confirm permission on temporary directory.
- Check DNS if firmware check/required service is enabled.
- Remove existing cache and notify at boot.
- Change default AIO size to 4096.
- Change kern.maxfilesperproc to 50000.
- Change default atime of ZFS dataset is on.
- Change minimum UID/GID is 1000.
- Change bind WebGUI to LAN only.
- Update SSL certificate and privatekey.
- Add iscsi default values to default config.
- Remove unused hw.ata.to from sysctl.
- Remove AIO disable at boot.
- Add 60days lifetime on ZFS auto snapshot.
- Add ata chipset patch. (VT6420/VT6421)
- Add amdtemp patch.
- Add VM timer workaround.
- Add useful PHP modules.
- Add php wrapper for webserver.
- Add sockstat to Diagnostics|Information|Sockets.
- Add missing NUT drivers.
- Use SCSI inquiry for model and serial.
- Upgrade istgt to 20121028.
- Upgrade isboot to 0.2.6.